# mouse_clicker

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
mouse_clicker_core/: Cargo.toml
mouse_clicker_core/src/: keyboard_event_handler.rs  lib.rs  message_loop.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ClickSettings.tsx  clicker-types.ts
src/types/: index.ts
